fixed：修复scrollbar有内边距滚动条位置错误问题

--- a/packages/theme/src/scrollbar.scss
+++ b/packages/theme/src/scrollbar.scss
@@ -2,6 +2,7 @@
 
 @include b(scrollbar) {
   --y-scrollbar-bar-bg-color: var(--y-color-text-quaternary);
+  --y-scrollbar-bar-hover-color: var(--y-color-text-tertiary);
 }
 
 @include b(scrollbar) {
@@ -46,6 +47,10 @@
       pointer-events: all;
       border-radius: 3px;
       background-color: var(--y-scrollbar-bar-bg-color);
+
+      &:hover {
+        background-color: var(--y-scrollbar-bar-hover-color);
+      }
     }
   }
 }
